solve display bug on toggle weekend visibility

--- a/src/components/Timeline/style.scss
+++ b/src/components/Timeline/style.scss
@@ -54,6 +54,9 @@
         padding: 0.2rem;
         margin: 0.2rem;
       }
+      &--remove {
+        display: none;
+      }
     }
   }
   &__days {
